
Release 2.0   ( Content [ ] | BugFix [ ] | Gui [ ] | Test[ ] Struct [ ] ) >>13033 LOC<< | 2: >>12764 LOC<<
Finalisierung und Test) |  
----------------------------------------------------------------------------------------------------------------------------
  [Content]	Das aktuelle Tab kann nun durch Drücken von Strg+W geschlossen werden
  [Struct]  Das "lazy saving" ist für die TodoItem Beschreibung eingeführt worden
  [Struct]  Das "lazy saving" ist für den TodoItem Status einegeführt worden



Release 1.7   ( Content [ ] | BugFix [ ] | Gui [ ] | Test[ ] Struct [X] ) >>13033 LOC<< | 2: >>12764 LOC<<
Finalisierung und Test) |  
----------------------------------------------------------------------------------------------------------------------------
  [BugFix]	Das Verzeichnis "attachments" wird nun automatisch angelegt wenn es nicht existiert
  [BugFix]	TodoListen werden nun im korrekten Encoding gelesen und geschrieben (UTF-8)
  [Gui]		Beim internen speichern von Attachments wird nun eine Fehlermeldung ausgegeben und das Verzeichnis wird nur verlinkt.
  [Struct]	Exceptions können nun inklusive Stacktrace geloggt werden
  [Struct]	Das gesamte Error-Logging wurde auf das neue Verfahren umgestellt
  [Gui]		Das Farbfenster für die Kategorien-Farbe hat nun einen anderen Cursor
1 [Content]	Es gibt nun einen Icon-Button zum direkten öffnen des temporären Attachment-Verzeichnisses + 2 neue Icons
1 [Content]	Die Todo-Listen können nun zur Textsuche zusätzlich auch nach Kategorie gefiltert werden
1 [Content]	Es gibt in der High-Priority-Liste nun eine Anzeige, wie lange ein Todo nicht verändert wurde
1 [Content]	Der Filter der Todo-Liste wurde überarbeitet, nun kann aus dem Stand nach Kategorien gefiltert werden
2 [Gui]		Die derzeit aktive Box auf der Startseite hat nun einen Schatten, damit zu sehen ist, dass sie selektiert ist
2 [Content]	Die High-Prio List zeigt bei selektierter Liste nun nur noch deren Items an